fixed flip on mobile

--- a/src/components/President/President.css
+++ b/src/components/President/President.css
@@ -1,7 +1,7 @@
 .President {
     position: relative;
-    width: 7rem;
-    height: 7rem;
+    width: 5rem;
+    height: 5rem;
     cursor: pointer;
     margin: .4rem;
     user-select: none;
@@ -73,9 +73,9 @@
 @media (max-width: 1000px) {
 
     .President {
-        width: 3.6rem;
-        height: 3.6rem;
-        margin: .2rem;
+        width: 3.5rem;
+        height: 3.5rem;
+        margin: .5rem;
     }
 
 
